refactor: boolean 원시값 포장